[gd_scene load_steps=9 format=3 uid="uid://hjsk18ewr240"]

[ext_resource type="Script" path="res://Scripts/dialogo_gameover.gd" id="1_l2qwu"]
[ext_resource type="FontFile" uid="uid://77tm5kpkgub6" path="res://Fonts/comickbook/ComickBook_Simple.ttf" id="2_wn7hc"]

[sub_resource type="CanvasTexture" id="CanvasTexture_885sb"]

[sub_resource type="Animation" id="Animation_i0amt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l0obv"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1tse1"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bty0q"]
_data = {
"RESET": SubResource("Animation_i0amt"),
"fade_in": SubResource("Animation_l0obv"),
"fade_out": SubResource("Animation_1tse1")
}

[sub_resource type="CanvasTexture" id="CanvasTexture_umhot"]

[node name="Node2D" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-5, -8)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(644.25, 368.25)
scale = Vector2(1279.5, 721.5)
texture = SubResource("CanvasTexture_885sb")

[node name="Transition" type="AnimationPlayer" parent="ParallaxBackground/ParallaxLayer"]
libraries = {
"": SubResource("AnimationLibrary_bty0q")
}

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer/Transition"]
offset_right = 1282.0
offset_bottom = 719.0
color = Color(0, 0, 0, 1)

[node name="caja_dialogo" type="Node2D" parent="."]
position = Vector2(614, 376)

[node name="Dialogo" type="Sprite2D" parent="caja_dialogo"]
modulate = Color(0.0862745, 0.956863, 0.956863, 1)
self_modulate = Color(0.0509804, 0.352941, 0.541176, 0.878431)
position = Vector2(28.5, 194.5)
scale = Vector2(1141, 191)
texture = SubResource("CanvasTexture_umhot")

[node name="Caja_nombre" type="Node2D" parent="."]

[node name="Nombre" type="Sprite2D" parent="Caja_nombre"]
modulate = Color(0.0862745, 0.956863, 0.956863, 1)
self_modulate = Color(0.0509804, 0.352941, 0.541176, 0.878431)
position = Vector2(66.025, 389.29)
scale = Vector2(150, 55.299)
texture = SubResource("CanvasTexture_umhot")
offset = Vector2(0.54, 0.94)

[node name="Dialogo_gameover" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_l2qwu")

[node name="gameover" type="Control" parent="Dialogo_gameover"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Dialogo_gameover" type="RichTextLabel" parent="Dialogo_gameover/gameover"]
layout_mode = 0
offset_left = 92.0
offset_top = 500.0
offset_right = 1166.0
offset_bottom = 646.0
theme_override_fonts/normal_font = ExtResource("2_wn7hc")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true

[node name="nombres" type="Control" parent="Dialogo_gameover"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="caja_nombre" type="RichTextLabel" parent="Dialogo_gameover/nombres"]
layout_mode = 0
offset_left = 81.0
offset_top = 423.0
offset_right = 224.0
offset_bottom = 462.0
theme_override_fonts/normal_font = ExtResource("2_wn7hc")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
